# floe

./: .aikido  .aikidoignore  .devcontainerignore  .dockerignore  .env.example  .envrc  .gitignore  .gitnexusignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .vuln-ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  TESTING.md  coverage-3.10.xml  mkdocs.yml  pyproject.toml  pyrightconfig.json  sonar-project.properties
.agent/: epic-auto-mode
.beads/: PRIME.md  issues.jsonl
.claude/: RULES_INDEX.md  optimization-plan.md  settings.json  skill-chains.json
.cognee/: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: CI.md
.ralph/: config.yaml  manifest.json
.sisyphus/: boulder.json
.specwright/: AUDIT.md  BACKLOG.md  CHARTER.md  CONSTITUTION.md  LANDSCAPE.md  TESTING.md  config.json  patterns.md
benchmarks/: conftest.py  test_dagster_plugin_perf.py  test_metrics_perf.py  (+3 more)
devtools/agent-memory/: .gitignore  .uv-secure.toml  README.md  pyproject.toml
devtools/agent-memory/.cognee/: config.yaml
devtools/agent-memory/devtools/agent-memory/: .uv-secure.toml
devtools/agent-memory/docs/: verification-protocol.md
devtools/agent-memory/scripts/: cleanup_test_datasets.py
devtools/agent-memory/src/agent_memory/: __init__.py  cli.py  cognee_client.py  config.py  docstring_extractor.py  git_diff.py  markdown_parser.py  mcp_config.py  models.py  resilience.py  session.py  testing.py
devtools/agent-memory/src/agent_memory/ops/: __init__.py  batch.py  coverage.py  drift.py  health.py  quality.py
devtools/agent-memory/tests/: conftest.py
devtools/agent-memory/tests/contract/: conftest.py  test_cognee_api_contract.py
devtools/agent-memory/tests/integration/: conftest.py  test_cognee_cloud.py  test_dataset_isolation.py  test_sync_cycle.py
devtools/agent-memory/tests/quality/: test_search_quality.py
devtools/agent-memory/tests/unit/: test_cli_memify.py  test_cli_reset.py  test_cli_session_recover.py  test_cli_session_save.py  test_cli_test.py  test_cognee_client.py  test_conftest_fixtures.py  test_dataset_utilities.py  test_docstring_extractor.py  test_git_diff.py  test_markdown_parser.py  test_mcp_config.py  test_ops_batch.py  test_ops_coverage.py  test_ops_drift.py  test_ops_health.py  test_ops_quality.py  test_resilience.py  test_session.py  test_sync_helpers.py
plugins/floe-alert-email/: README.md  pyproject.toml
plugins/floe-alert-email/src/floe_alert_email/: __init__.py  plugin.py  tracing.py
plugins/floe-alert-email/tests/: conftest.py
plugins/floe-alert-email/tests/unit/: conftest.py  test_plugin.py  test_tracing.py
plugins/floe-catalog-polaris/: README.md  pyproject.toml
plugins/floe-catalog-polaris/schemas/: polaris-catalog-config.schema.json
plugins/floe-catalog-polaris/src/floe_catalog_polaris/: __init__.py  config.py  credentials.py  errors.py  models.py  plugin.py  retry.py  tracing.py
plugins/floe-catalog-polaris/tests/: conftest.py
plugins/floe-catalog-polaris/tests/integration/: conftest.py  test_credential_vending.py  test_discovery.py  test_health_check.py  test_namespace_operations.py  test_polaris_connection.py  test_quickstart_examples.py  test_s3_endpoint_integrity.py  test_table_operations.py
plugins/floe-catalog-polaris/tests/unit/: conftest.py  test_client_endpoint_override.py  test_config.py  test_credentials.py  test_credentials_helper.py  test_errors.py  test_health.py  test_namespace.py  test_plugin.py  test_plugin_compliance.py  test_retry.py  test_tables.py
plugins/floe-dbt-fusion/: README.md  pyproject.toml
plugins/floe-dbt-fusion/src/floe_dbt_fusion/: __init__.py  detection.py  errors.py  fallback.py  plugin.py  tracing.py
plugins/floe-dbt-fusion/tests/: conftest.py
plugins/floe-dbt-fusion/tests/integration/: conftest.py  test_discovery.py  test_fusion_integration.py
plugins/floe-dbt-fusion/tests/unit/: test_detection.py  test_fallback.py  test_linting.py  test_plugin.py  test_tracing.py
plugins/floe-network-security-k8s/: README.md  pyproject.toml
plugins/floe-network-security-k8s/src/floe_network_security_k8s/: __init__.py  plugin.py  tracing.py
plugins/floe-network-security-k8s/tests/: __init__.py  conftest.py
plugins/floe-network-security-k8s/tests/e2e/: __init__.py  test_policy_generation_e2e.py
plugins/floe-network-security-k8s/tests/integration/: __init__.py  test_cli_integration.py  test_cni_detection.py  test_default_deny_deployment.py  test_plugin_discovery.py
plugins/floe-network-security-k8s/tests/performance/: test_policy_generation_performance.py
plugins/floe-network-security-k8s/tests/unit/: __init__.py  test_default_deny.py  test_domain_policies.py  test_egress_rules.py  test_platform_policies.py  test_plugin_compliance.py  test_plugin_metadata.py  test_pss_labels.py  test_security_context.py  test_tracing.py  test_writable_volumes.py
plugins/floe-rbac-k8s/: README.md  pyproject.toml
plugins/floe-rbac-k8s/src/floe_rbac_k8s/: __init__.py  plugin.py  tracing.py
plugins/floe-rbac-k8s/tests/: conftest.py
plugins/floe-rbac-k8s/tests/integration/: conftest.py  test_cross_namespace_access.py  test_k8s_rbac_compliance.py  test_namespace_isolation.py  test_pss_enforcement.py
plugins/floe-rbac-k8s/tests/unit/: conftest.py  test_plugin.py  test_tracing.py
plugins/floe-secrets-infisical/: README.md  pyproject.toml
plugins/floe-secrets-infisical/src/floe_secrets_infisical/: __init__.py  config.py  errors.py  plugin.py  tracing.py
plugins/floe-secrets-infisical/tests/: conftest.py
plugins/floe-secrets-infisical/tests/integration/: conftest.py  test_discovery.py  test_infisical.py
plugins/floe-secrets-infisical/tests/unit/: conftest.py  test_config.py  test_errors.py  test_init.py  test_plugin.py  test_tracing.py
plugins/floe-telemetry-console/: README.md  pyproject.toml
plugins/floe-telemetry-console/src/floe_telemetry_console/: __init__.py  plugin.py
plugins/floe-telemetry-console/tests/: conftest.py
plugins/floe-telemetry-console/tests/unit/: test_plugin.py
(+2056 files in other folders)
