# Workspace root - development dependencies only, no package to build
# Individual packages are in packages/ directory

[project]
name = "floe-workspace"
version = "0.0.0"
description = "floe workspace root - not a distributable package"
requires-python = ">=3.10"

# Development dependencies for the entire workspace
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-codspeed>=3.0",  # Performance benchmarking with CodSpeed
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "bandit[toml]>=1.7",
    "uv-secure>=0.5.0",  # Security audit native to uv.lock files
    "types-psycopg2>=2.9",  # Type stubs for psycopg2
    "types-requests>=2.31",  # Type stubs for requests
    "requests>=2.31",  # HTTP client for telemetry fixture tests
    "jsonschema>=4.0",  # For JSON Schema validation in tests
    # Include floe-core for development
    "floe-core",
    # Include plugins for development
    "floe-catalog-polaris",
    # Telemetry backend plugins (for entry point discovery in tests)
    "floe-telemetry-console",
    "floe-telemetry-jaeger",
    # Include floe-compute-duckdb for development
    "floe-compute-duckdb",
]

[tool.uv]
# Supply chain protection: 3-day cooldown for new package versions
# Applied when running `uv lock` - prevents locking in very new packages
# CI installs from lock file directly (no re-resolution)
# See: https://mkennedy.codes/posts/devops-python-supply-chain-security/
exclude-newer = "P3D"

[tool.uv.sources]
floe-core = { path = "packages/floe-core", editable = true }
floe-catalog-polaris = { path = "plugins/floe-catalog-polaris", editable = true }
floe-compute-duckdb = { path = "plugins/floe-compute-duckdb", editable = true }
floe-telemetry-console = { path = "plugins/floe-telemetry-console", editable = true }
floe-telemetry-jaeger = { path = "plugins/floe-telemetry-jaeger", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/floe-core/src",
    "plugins/floe-catalog-polaris/src",
    ".",  # Enable import of 'testing' module from project root
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
    "slow: Marks tests as slow (> 1 second)",
    "integration: Marks tests requiring K8s services",
    "contract: Marks cross-package contract tests",
    "e2e: Marks end-to-end pipeline tests",
    "requires_sts: Marks tests requiring STS-enabled storage backend (MinIO with STS)",
    "benchmark: Marks performance benchmark tests (CodSpeed)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Exclude test directories to avoid duplicate module errors with conftest.py
exclude = [
    "^packages/.*/tests/",
    "^tests/",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.bandit]
exclude_dirs = ["tests", "packages/floe-core/tests"]
skips = ["B101"]  # Allow assert statements (used in tests)

[tool.uv-secure.vulnerability_criteria]
# GHSA-5j53-63w8-8625: OAuth/CSRF vulnerability in fastapi-users 14.0.2
# Severity: Moderate (5.9/10)
# Impact: Not exploitable - agent-memory is internal tooling without OAuth/SSO
# Root cause: cognee pins fastapi-users<15.0.0 (transitive dependency)
# When cognee updates their dependency constraint, remove this ignore
ignore_vulnerabilities = ["GHSA-5j53-63w8-8625"]

[tool.coverage.run]
source = ["packages/floe-core/src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true
