# Workspace root - development dependencies only, no package to build
# Individual packages are in packages/ directory

[project]
name = "floe-workspace"
version = "0.0.0"
description = "floe workspace root - not a distributable package"
requires-python = ">=3.10"

# Development dependencies for the entire workspace
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",  # Test timeout enforcement for E2E tests
    "pytest-codspeed>=3.0",  # Performance benchmarking with CodSpeed
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "bandit[toml]>=1.7",
    "detect-secrets>=1.5.0",  # Secret detection with entropy analysis
    "import-linter>=2.0",  # Architecture boundary enforcement
    "uv-secure>=0.5.0",  # Security audit native to uv.lock files
    "types-psycopg2>=2.9",  # Type stubs for psycopg2
    "types-requests>=2.31",  # Type stubs for requests
    "requests>=2.31",  # HTTP client for telemetry fixture tests
    "jsonschema>=4.0",  # For JSON Schema validation in tests
    "dagster-graphql",  # GraphQL API for Dagster integration testing
    # Include floe-core for development
    "floe-core",
    # Include floe-iceberg for development
    "floe-iceberg",
    # Include plugins for development
    "floe-catalog-polaris",
    # Telemetry backend plugins (for entry point discovery in tests)
    "floe-telemetry-console",
    "floe-telemetry-jaeger",
    # Lineage backend plugins (for entry point discovery in tests)
    "floe-lineage-marquez",
    # Include floe-compute-duckdb for development
    "floe-compute-duckdb",
    # Include identity and secrets plugins for development
    "floe-identity-keycloak",
    "floe-secrets-infisical",
    "floe-secrets-k8s",
    # RBAC plugin for Kubernetes RBAC manifest generation
    "floe-rbac-k8s",
    # Include orchestrator plugins for development
    "floe-orchestrator-dagster",
    # Include semantic layer plugins for development (Epic 4E)
    "floe-semantic-cube",
    # Include dbt plugins for development (Epic 5A)
    "floe-dbt-core",
    "floe-dbt-fusion",
    # Network security plugin for Kubernetes NetworkPolicy generation (Epic 7C)
    "floe-network-security-k8s",
    # Data quality plugins (Epic 5B)
    "floe-quality-gx",
    "floe-quality-dbt",
]

[tool.uv]
# Enable prereleases for sigstore dependencies (betterproto, sigstore-protobuf-specs)
prerelease = "allow"

# Supply chain protection: 3-day cooldown for new package versions
# Set UV_EXCLUDE_NEWER dynamically in CI/scripts (uv 0.5.x only supports dates, not durations)
# Example: UV_EXCLUDE_NEWER=$(date -v-3d +%Y-%m-%d) uv lock
# CI installs from lock file directly (no re-resolution)
# See: https://mkennedy.codes/posts/devops-python-supply-chain-security/

[tool.uv.sources]
floe-core = { path = "packages/floe-core", editable = true }
floe-iceberg = { path = "packages/floe-iceberg", editable = true }
floe-catalog-polaris = { path = "plugins/floe-catalog-polaris", editable = true }
floe-compute-duckdb = { path = "plugins/floe-compute-duckdb", editable = true }
floe-telemetry-console = { path = "plugins/floe-telemetry-console", editable = true }
floe-telemetry-jaeger = { path = "plugins/floe-telemetry-jaeger", editable = true }
floe-lineage-marquez = { path = "plugins/floe-lineage-marquez", editable = true }
floe-identity-keycloak = { path = "plugins/floe-identity-keycloak", editable = true }
floe-secrets-infisical = { path = "plugins/floe-secrets-infisical", editable = true }
floe-secrets-k8s = { path = "plugins/floe-secrets-k8s", editable = true }
floe-rbac-k8s = { path = "plugins/floe-rbac-k8s", editable = true }
floe-orchestrator-dagster = { path = "plugins/floe-orchestrator-dagster", editable = true }
floe-semantic-cube = { path = "plugins/floe-semantic-cube", editable = true }
floe-dbt-core = { path = "plugins/floe-dbt-core", editable = true }
floe-dbt-fusion = { path = "plugins/floe-dbt-fusion", editable = true }
floe-network-security-k8s = { path = "plugins/floe-network-security-k8s", editable = true }
floe-quality-gx = { path = "plugins/floe-quality-gx", editable = true }
floe-quality-dbt = { path = "plugins/floe-quality-dbt", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/floe-core/src",
    "packages/floe-iceberg/src",
    "plugins/floe-compute-duckdb/src",
    "plugins/floe-catalog-polaris/src",
    "plugins/floe-identity-keycloak/src",
    "plugins/floe-secrets-infisical/src",
    "plugins/floe-secrets-k8s/src",
    "plugins/floe-rbac-k8s/src",
    "plugins/floe-orchestrator-dagster/src",
    "plugins/floe-dbt-core/src",
    "plugins/floe-dbt-fusion/src",
    "plugins/floe-network-security-k8s/src",
    "plugins/floe-quality-gx/src",
    "plugins/floe-quality-dbt/src",
    "plugins/floe-semantic-cube/src",
    "plugins/floe-lineage-marquez/src",
    "plugins/floe-ingestion-dlt/src",
    ".",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"
timeout = 300  # Default 5 min timeout for E2E tests (overridable per-test)
timeout_method = "signal"  # Use signal-based timeout (works on Unix)
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
    "slow: Marks tests as slow (> 1 second)",
    "integration: Marks tests requiring K8s services",
    "contract: Marks cross-package contract tests",
    "e2e: Marks end-to-end pipeline tests",
    "requires_sts: Marks tests requiring STS-enabled storage backend (MinIO with STS)",
    "benchmark: Marks performance benchmark tests (CodSpeed)",
]
# Suppress deprecation warnings from third-party dependencies
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:dagster_shared.*:",
    "ignore::pydantic.PydanticDeprecatedSince212:pyiceberg.*:",
    "ignore:.*model_validator.*:pydantic.PydanticDeprecatedSince212:pyiceberg.*:",
    "ignore:.*__fields__.*:pydantic.PydanticDeprecatedSince20:dagster_shared.*:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Exclude test directories to avoid duplicate module errors with conftest.py
exclude = [
    "^packages/.*/tests/",
    "^tests/",
]

# Optional runtime dependencies - these are only available when the specific plugin is installed
# Using disable_error_code since ignore_missing_imports doesn't suppress import-not-found
# Also disable import-untyped for packages like kubernetes that lack py.typed markers
disable_error_code = ["import-not-found", "import-untyped"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "UP017",  # datetime.UTC alias only available in Python 3.11+
]

[tool.bandit]
exclude_dirs = ["tests", "packages/floe-core/tests", ".venv", "**/.venv"]
skips = [
    "B101",  # Allow assert statements (used in tests)
    "B108",  # Allow /tmp as K8s container mount path (not temp file usage)
    "B110",  # Allow try-except-pass (used for optional feature detection)
    "B112",  # Allow try-except-continue (used in file iteration)
    "B311",  # Allow random for non-crypto purposes (test data, jitter)
    "B404",  # Allow subprocess import (needed for git operations)
    "B603",  # Allow subprocess without shell=True (intentionally safe)
    "B607",  # Allow partial executable paths (git, dbt - known tools)
    "B105",  # Allow token username constant (not a real secret)
    "B106",  # Allow empty credential defaults (populated at runtime)
]

[tool.uv-secure.vulnerability_criteria]
# GHSA-5j53-63w8-8625: OAuth/CSRF vulnerability in fastapi-users 14.0.2
# Severity: Moderate (5.9/10)
# Impact: Not exploitable - agent-memory is internal tooling without OAuth/SSO
# Root cause: cognee pins fastapi-users<15.0.0 (transitive dependency)
# When cognee updates their dependency constraint, remove this ignore
#
# GHSA-7gcm-g887-7qv7: DoS via ParseDict() in protobuf <= 6.33.4
# Severity: High (8.2/10 CVSS v4)
# Impact: Not exploitable - floe doesn't parse untrusted protobuf JSON
# Root cause: Transitive dependency from dagster, dbt, opentelemetry
# No fix version available yet. Remove when protobuf releases patch.
ignore_vulnerabilities = ["GHSA-5j53-63w8-8625", "GHSA-7gcm-g887-7qv7"]

[tool.coverage.run]
source = ["packages/floe-core/src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true

# ==========================================================
# Import Linter: Architecture boundary enforcement
# Run: uv run lint-imports
# ==========================================================

[tool.importlinter]
root_packages = [
    "floe_core",
    "floe_iceberg",
    "floe_catalog_polaris",
    "floe_compute_duckdb",
]
include_external_packages = true

# Contract: dbt owns SQL - no SQL parsing in other packages
[[tool.importlinter.contracts]]
name = "dbt owns SQL"
type = "forbidden"
source_modules = [
    "floe_core",
    "floe_catalog_polaris",
    "floe_compute_duckdb",
]
forbidden_modules = [
    "sqlparse",
    "sqlglot",
    "sql_metadata",
]

# Contract: Core independence from orchestrators
[[tool.importlinter.contracts]]
name = "Core independence from orchestrators"
type = "forbidden"
source_modules = ["floe_core"]
forbidden_modules = [
    "dagster",
    "dagster_dbt",
    "airflow",
    "prefect",
]

# Contract: Core independence from specific compute implementations
[[tool.importlinter.contracts]]
name = "Core independence from compute implementations"
type = "forbidden"
source_modules = ["floe_core"]
forbidden_modules = [
    "duckdb",
    "snowflake",
    "databricks",
    "pyspark",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
