[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Cognee-based persistent memory for AI coding agents contributing to floe"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Obsidian Owl", email = "team@obsidianowl.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "cognee>=0.5.0",
    "cogwit-sdk>=0.1.0",  # Cognee Cloud SDK for memify support
    # cognee-mcp is deployed as a Docker container, not a Python dependency
    # See: docker run -p 8000:8000 cognee/cognee-mcp:main
    "aiohttp>=3.13.3",  # Override transitive dep - fixes 8 CVEs (GHSA-6mq8, etc.)
    "httpx>=0.27.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0",
    # Note: fastapi-users 14.0.2 has GHSA-5j53-63w8-8625 (Moderate, OAuth/CSRF)
    # Ignored via .uv-secure.toml - not exploitable (internal tool, no OAuth/SSO)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:app"

[project.urls]
Homepage = "https://github.com/Obsidian-Owl/floe"
Documentation = "https://github.com/Obsidian-Owl/floe/tree/main/docs"
Repository = "https://github.com/Obsidian-Owl/floe"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
]
