[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floe-dbt-fusion"
version = "0.1.0"
description = "DBT plugin using dbt Fusion CLI for high-performance parallel execution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Obsidian Owl", email = "team@obsidianowl.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "floe-core>=0.1.0",
    "pydantic>=2.0",
    "structlog>=23.0",
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
fallback = [
    "floe-dbt-core>=0.1.0",
]

[project.entry-points."floe.dbt"]
fusion = "floe_dbt_fusion:DBTFusionPlugin"

[project.urls]
Homepage = "https://github.com/Obsidian-Owl/floe"
Documentation = "https://github.com/Obsidian-Owl/floe/tree/main/docs"
Repository = "https://github.com/Obsidian-Owl/floe"

[tool.hatch.build.targets.wheel]
packages = ["src/floe_dbt_fusion"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
    "integration: Mark test as integration test requiring real services",
]
