[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floe-network-security-k8s"
version = "0.1.0"
description = "Kubernetes Network Security plugin for the floe data platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Obsidian Owl", email = "team@obsidianowl.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "floe-core>=0.1.0",
    "pydantic>=2.12.5,<3.0",  # Pin upper bound (12B-DEP-001)
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.entry-points."floe.network_security"]
k8s = "floe_network_security_k8s:K8sNetworkSecurityPlugin"

[project.urls]
Homepage = "https://github.com/Obsidian-Owl/floe"
Documentation = "https://github.com/Obsidian-Owl/floe/tree/main/docs"
Repository = "https://github.com/Obsidian-Owl/floe"

[tool.hatch.build.targets.wheel]
packages = ["src/floe_network_security_k8s"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
    "integration: Mark test as integration test requiring real services",
    "e2e: Mark test as end-to-end test",
]
