[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floe-secrets-infisical"
version = "0.1.0"
description = "Infisical OSS secrets backend plugin for the floe data platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Obsidian Owl", email = "team@obsidianowl.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "floe-core>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "respx>=0.21",
]

[project.entry-points."floe.secrets"]
infisical = "floe_secrets_infisical:InfisicalSecretsPlugin"

[project.urls]
Homepage = "https://github.com/Obsidian-Owl/floe"
Documentation = "https://github.com/Obsidian-Owl/floe/tree/main/docs"
Repository = "https://github.com/Obsidian-Owl/floe"

[tool.hatch.build.targets.wheel]
packages = ["src/floe_secrets_infisical"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
    "integration: Mark test as integration test requiring real services",
]
