[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floe-telemetry-console"
version = "0.1.0"
description = "Console telemetry backend plugin for floe - outputs traces to stdout"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Obsidian Owl", email = "team@obsidianowl.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "floe-core>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/Obsidian-Owl/floe"
Documentation = "https://github.com/Obsidian-Owl/floe/tree/main/docs"
Repository = "https://github.com/Obsidian-Owl/floe"

[project.entry-points."floe.telemetry_backends"]
console = "floe_telemetry_console:ConsoleTelemetryPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/floe_telemetry_console"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "requirement(id): Mark test with requirement ID for traceability",
]
